test first commit to check git is working

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 			<label for="lblTime">TIME:</label>
 			<input id="lblTime" type="text" />
 		</div>
+		<div id="test">
+		</div>
 		<div id="game">
 			<canvas id="canvas" height="600" width="600"></canvas>
 		</div>
