--- a/index.html
+++ b/index.html
@@ -47,33 +47,33 @@
                 <button href="#a" onclick="showLogin()">Login</button>
             </section>
             <section id="register" style="display:none;">
-                <form class="cmxform" id="signupForm" method="get" action="" name="signupForm">
+                <form class="cmxform" id="registerForm" method="get" action="" name="registerForm">
                     <fieldset>
-                        <legend>Validating a complete form</legend>
+                        <legend>Please sign up to play our pacmen :)</legend>
                         <p>
                             <label for="username">Username</label>
-                            <input id="username" name="username" type="text" minlength="2" required>
+                            <input id="username" name="username" type="text" required>
                         </p>
                         <p>
                             <label for="password">Password</label>
-                            <input id="password" name="password" type="password">
+                            <input id="password" name="password" type="password" minlength="6" required>
                         </p>
                         <p>
                             <label for="confirm_password">Confirm password</label>
-                            <input id="confirm_password" name="confirm_password" type="password">
+                            <input id="confirm_password" name="confirm_password" type="password" required>
                         </p>
 
                         <p>
                             <label for="firstname">First name</label>
-                            <input id="firstname" name="firstname" type="text">
+                            <input id="firstname" name="firstname" type="text" required>
                         </p>
                         <p>
                             <label for="lastname">Last name</label>
-                            <input id="lastname" name="lastname" type="text">
+                            <input id="lastname" name="lastname" type="text" required>
                         </p>
                         <p>
                             <label for="email">Email</label>
-                            <input id="email" name="email" type="email">
+                            <input id="email" name="email" type="email" required>
                         </p>
 
                         <!-- <p>
@@ -83,11 +83,11 @@
 
                         <p>
                             <label for="birthdate">Birthdate</label>
-                            <input type="date" id="dated">
+                            <input type="date" id="dated" required>
                         </p>
                         <p>
                             <label for="agree">Please agree to our policy</label>
-                            <input type="checkbox" class="checkbox" id="agree" name="agree">
+                            <input type="checkbox" class="checkbox" id="agree" name="agree" required>
                         </p>
 
                         <p>
