--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <script type="text/javascript" src="./app.js"></script>
     <script type="text/javascript" src="./modalDialog.js"></script>
     <script type="text/javascript" src="./settings.js"></script>
-    <script type="text/javascript" src="./jquery.dialog.js"></script>
-
-    <!-- <script type="text/javascript" src="./register.js"></script> -->
-    <!-- <script src="js/signup-form.js"></script> -->
-    <!-- <script src="https://code.jquery.com/jquery-1.12.4.js"></script> -->
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
     <!-- <script src="../dist/jquery.validate.js"></script>
     <script src="../lib/jquery.js"></script> -->
